cmake_minimum_required(VERSION 3.31)
project(ProgramowanieObiektowe)

add_subdirectory(Ex1)
add_subdirectory(SequenceOperations)
add_subdirectory(LibraryManagement)
add_subdirectory(Tests)
add_subdirectory(Rosalind/counting_dna_nucleotides)
add_subdirectory(Rosalind/transcribing_dna_into_rna)
add_subdirectory(Rosalind/complementing_a_strand_of_dna)
add_subdirectory(Geometry)
